--- a/kurs/kurs.csproj
+++ b/kurs/kurs.csproj
@@ -72,6 +72,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Park_spotDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Park_spotDataSet21.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Park_spotDataSet21.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Park_spotDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Park_spotDataSet3.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Log_in.resx">
@@ -114,6 +124,28 @@
     </None>
     <None Include="Park_spotDataSet1.xss">
       <DependentUpon>Park_spotDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Park_spotDataSet21.xsc">
+      <DependentUpon>Park_spotDataSet21.xsd</DependentUpon>
+    </None>
+    <None Include="Park_spotDataSet21.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Park_spotDataSet21.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Park_spotDataSet21.xss">
+      <DependentUpon>Park_spotDataSet21.xsd</DependentUpon>
+    </None>
+    <None Include="Park_spotDataSet3.xsc">
+      <DependentUpon>Park_spotDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="Park_spotDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Park_spotDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Park_spotDataSet3.xss">
+      <DependentUpon>Park_spotDataSet3.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
